# 014-Docker

./: CMakeLists.txt  Dockerfile  README.md  main.c
.github/workflows/: publish.yaml
commonSrc/: argValidator.c  commonHttpFunctions.c  mime.c  net.c
headers/: argValidator.h  commonHttpFunctions.h  mime.h  net.h
serverroot/: a.txt  b.txt
